--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   http: ^0.12.2
   flutter_dotenv: ^3.1.0
+  provider: ^3.1.0+1
+  intl: ^0.16.1
   flutter:
     sdk: flutter
 
