--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ environment:
 
 dependencies:
   http: ^0.12.2
-  flutter_dotenv: ^3.1.0
   provider: ^3.1.0+1
   intl: ^0.16.1
   flutter:
@@ -47,8 +46,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - .env
+  # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
